manifests/webstore.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: webstore
  namespace: store
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`store.local`)
      kind: Rule
      services:
        - name: webstore
          port: 5000
  tls:
    secretName: traefik-default-cert
